--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@angular/animations": "^19.0.6",
+    "@angular/cdk": "^19.2.10",
     "@angular/common": "^19.0.6",
     "@angular/compiler": "^19.0.6",
     "@angular/core": "^19.0.6",
@@ -16,7 +17,15 @@
     "@angular/router": "^19.0.6",
     "@ng-icons/core": "^31.2.0",
     "@ng-icons/heroicons": "^31.2.0",
+    "@primeng/themes": "^19.1.0",
+    "@spartan-ng/brain": "0.0.1-alpha.441",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.0",
     "rxjs": "^7.8.1",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.5.0",
     "zone.js": "~0.15.0"
   },
@@ -24,9 +33,12 @@
     "@angular/build": "^19.0.7",
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.6",
+    "@spartan-ng/cli": "^0.0.1-alpha.441",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.6.3"
   }
 }
